Add more unit test cases Upgrade strategy pattern interface resolution using keyed feature of autofac

--- a/Api.SequenceCalculator.Tests/Api.SequenceCalculator.Tests.csproj
+++ b/Api.SequenceCalculator.Tests/Api.SequenceCalculator.Tests.csproj
@@ -40,6 +40,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=4.8.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.8.1\lib\net45\Autofac.dll</HintPath>
+    </Reference>
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.4.2.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
@@ -71,10 +74,13 @@
     <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web.Http, Version=5.2.6.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContainerTest.cs" />
+    <Compile Include="Controllers\SequenceCalculatorControllerTests.cs" />
     <Compile Include="Service\SequenceCalculatorTests.cs" />
     <Compile Include="Service\SequenceGeneratorStrategy\AllNumbersUptoAGivenNumberStrategyTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -87,9 +93,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Api.SequenceCalculator\Api.SequenceCalculator.csproj">
       <Project>{8b54c6ec-7b9c-4784-b49a-52f1ded051ab}</Project>
